# Quantt

./: .gitignore  LICENSE  README.md  package-lock.json
engine/: main.py  requirements.txt  tests
engine/app/: main.py
engine/config/: explanation.txt  markets.py  risk.py  settings.py
engine/core/: explanation.txt
engine/data/: cache.py  explanation.txt  fetch.py
engine/exchange/: binance.py  bybit.py  coinbase.py  explanation.txt  okx.py
engine/execution/: explanation.txt  order_manager.py
quantt-engine/: app.py  general.db  main.py  my_database.db  pyproject.toml  requirements.txt  test.py  tests
quantt-engine/api/: a.md  endpoints.py  explanation.txt  principal.py  report.py  set.py
quantt-engine/backtesting/: explanation.txt
quantt-engine/config/: risk.py  risk_config.json  settings.py  store.py  trading_config.json
quantt-engine/core/: bot.py  engine.py
quantt-engine/data/: cache.py  client.py  exchange.py  fetch.py
quantt-engine/exchange/: awm.py  binance.py  bybit.py  coinbase.py  mexc.py  okx.py  selector.py
quantt-engine/execution/: order_manager.py  position_manager.py  risk_manager.py
quantt-engine/ml/: explanation.txt
quantt-engine/persistance/: connection.py  explanation.txt  methods.py  models.py  store.json  store.py
quantt-engine/reporting_portfolio/: explanation.txt  report.py  roll.py  static.py
quantt-engine/strategy/: explanation.txt  indicators.py  signal_generator.py
quantt-engine/utils/: log.py  math.py  stream_manager.py
quantt-ui/: index.html  main.js  package-lock.json  package.json  vite.config.ts
(+61 files in other folders)
