[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantt-engine"
version = "0.1.0-set"
description = "Algorithmic trading engine for crypto markets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Thi100" }]
license = "MIT"

dependencies = [
    "python-dotenv>=1.0.0",
    "ccxt>=4.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "aiohttp>=3.9.0",
    "async-timeout>=4.0.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0"
    "pyinstaller>=6.19.0"
]

# Explicitly tell setuptools what to bundle
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.1.0", "ruff>=0.2.0", "mypy>=1.8.0"]
backtest = ["vectorbt>=0.26.0", "empyrical>=0.5.5", "statsmodels>=0.14.0", "numba>=0.59.0", "scipy>=1.12.0"]
ml = ["scikit-learn>=1.4.0", "joblib>=1.3.0", "tqdm>=4.66.0", "torch>=2.2.0", "tsfresh>=0.20.0", "hmmlearn>=0.3.0"]
